Teste de responsividade

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <title>BetNest: Jogos de BetNest Aposta Online | Cassino</title>
     <link rel="stylesheet" href="eslitlos/principal.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="Imagens/LOGO.png" type="image/x-icon">
     <script src="script.js" defer></script>
 </head>
 <body>
     <header> 
         <div class="barra-informacao">
-            Esta é a barra de informações. Ela será fixa quando você rolar para baixo.
+        <div class="barra">
+
+        </div>
           </div>
         <div class="cabecalho">
             <div class="cabecalho_cadrastro">
@@ -65,10 +67,10 @@
                             <img class="imagem_passo" src="Imagens/Google_icons.png" alt="google icon">
                         </div>
                         <div>
-                            <img class="imagem_passo" src="Imagens/Google_icons.png" alt="google icon">
+                            <img class="imagem_passo" src="Imagens/Facebook_icons.png" alt="google icon">
                         </div>
                         <div>
-                            <img class="imagem_passo" src="Imagens/Google_icons.png" alt="google icon">
+                            <img class="imagem_passo" src="Imagens/LinkedIn_icons.png" alt="google icon">
                         </div>
                     </div>
                     <div class="princiapl_passo-cadrastro">
