--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
     <header> 
         <div class="barra-informacao">
         <div class="barra">
-
-        </div>
+            <div>
+                <h1 class="barra-h1">Entre na emoção. Aposte na sorte. </h1>
+                <h2 class="barra-h2">Cadrastre-se e receba bônus de deposito de até R$1000</h2>
+            </div>
+            <div class="barra-button-caixa">
+            <a href="" class="barra-button">Cadastrar-se AGORA</a>
           </div>
+        </div>
+    </div>
         <div class="cabecalho">
             <div class="cabecalho_cadrastro">
                 <div class="cabecalho_cadrastro-img">
@@ -75,11 +81,11 @@
                     </div>
                     <div class="princiapl_passo-cadrastro">
                         <div class="informacao">
-                            <h1 class="informacao_cadrastro infromacao_h1">Cadrastre-se</h1>
+                            <h1 class="infromacao_h1">Cadrastre-se</h1>
                             <p class="iformacao_Seta"></p>
-                            <h1 class="informacao_cadrastro infromacao_h1">Depositar</h1>
+                            <h1 class=" infromacao_h1">Depositar</h1>
                             <p class="iformacao_Seta"></p>
-                            <h1 class="informacao_cadrastro infromacao_h1">Faça sua aposta</h1>
+                            <h1 class="infromacao_h1">Faça sua aposta</h1>
                         </div>
                     </div>
                 </div>
@@ -100,7 +106,6 @@
         </main>
     </section>
     <footer>
-
     </footer>
 </body>
 </html>
