atualizaçao dos jogos

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <h1 class="cassino_h1">Esportes</h1>
                     <p class="cassino_p">Nossas apostas esportivas intuitivas são feitas para jogadores novos e experientes.</p>
                     <div class="cassino_link">
-                        <a href="" class="link link_cassino esportes">vá para esportes </a>
+                        <a href="jogos.html" class="link link_cassino esportes">vá para esportes </a>
                     </div>
             </div>
         </main>
