ATUALIZAÇÂO DE LINKS

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h2 class="barra-h2">Cadrastre-se e receba bônus de deposito de até R$1000</h2>
             </div>
             <div class="barra-button-caixa">
-            <a href="" class="barra-button">Cadastrar-se AGORA</a>
+            <a href="login.html" class="barra-button">Cadastrar-se AGORA</a>
           </div>
         </div>
     </div>
@@ -33,8 +33,8 @@
                     </span>
                 </div>
                 <div class="cabecalho_cadrastro-link">
-                    <a class="link cadrastro_link cadrastro" href="">CADRASTRO</a>
-                    <a class="link cadrastro_link" href="">ENTRAR</a>
+                    <a class="link cadrastro_link cadrastro" href="cadrastro.html">CADRASTRO</a>
+                    <a class="link cadrastro_link" href="login.html">ENTRAR</a>
                 </div>
             </div>
         </div>
@@ -66,7 +66,7 @@
                     <h1 class="principal_caixa-h1">Bem-vindo ao<br>BetNest</h1>
                     <p class="principal_caixa-p">Cadrastre-se e receba bônus de deposito de até R$1000</p>
                     <div class="Bonus">
-                        <a class="link cadrastro_bonus" href="">Cadrastrar</a>
+                        <a class="link cadrastro_bonus" href="cadrastro.html">Cadrastrar</a>
                     </div>
                     <div class="principal_login">
                         <div class="paso">
@@ -103,9 +103,40 @@
                         <a href="jogos.html" class="link link_cassino esportes">vá para esportes </a>
                     </div>
             </div>
+            <div class="caixa_central caixa_investimento">
+                <h1 class="cassino_h1">GANHAR MAIS</h1>
+                <p class="cassino_p">Aqui voce pode ganhar so colocando o seu dinheiro ajudando nosso serviços e voltara para você.</p>
+                <div class="cassino_link">
+                    <a href="jogos.html" class="link link_cassino esportes">vá para esportes </a>
+                </div>
+        </div>
         </main>
     </section>
     <footer>
+        <div class="roda-pe">
+          <div class="roda-pe_iconsSocial"> 
+
+          </div>
+          <div class="informacao_rodape">
+            <div class="informacao_rodape-texto">
+                <h4>LINKS</h4>
+               <ul>
+                <li>Aposta</li>
+                <li>Esporte</li>
+                <li>Investimento</li>
+                <li>Clube VIP</li>
+               </ul>
+            </div>
+            <div class="informacao_rodape-texto">
+                <h4>SOBRE NÓS</h4>
+                <ul>
+                    <li>Politica de privacidade</li>
+                    <li>Temos e Serviços</li>
+                    <li>Jogo Responsavel</li>
+                </ul>
+            </div>
+          </div>
+        </div>
     </footer>
 </body>
 </html>
