--- a/jogos.html
+++ b/jogos.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jogos de Futebol de Hoje</title>
-
 </head>
 <body>
-  <h1>Jogos de Futebol de Hoje</h1>
-  <ul id="lista-jogos"></ul>  
-  <script src="football-api.js" defer></script>
+  <div class="container">
+    <h1>Jogos de Futebol de Hoje</h1>
+    <ul id="lista-jogos"></ul>
+  </div>
+  <script src="football-api.js"></script>
 </body>
 </html>
