area de cadrastro

--- a/index.html
+++ b/index.html
@@ -115,25 +115,33 @@
     <footer>
         <div class="roda-pe">
           <div class="roda-pe_iconsSocial"> 
-
+            <div class="roda-pe_caixa">
+                <img class="roda-pe_logo" src="Imagens/LOGO.png" alt="Logo Do roda-pé">
+            </div>
+            <div class="roda-pe_caixa">
+                <a href=""><img class="roda-pe_Social" src="Imagens/instagram_icons.png" alt="Rede Social instagram"></a>
+                <a href=""><img class="roda-pe_Social" src="Imagens/twitter_icons.png" alt="Rede Social X"></a>
+            </div>
           </div>
           <div class="informacao_rodape">
-            <div class="informacao_rodape-texto">
-                <h4>LINKS</h4>
-               <ul>
-                <li>Aposta</li>
-                <li>Esporte</li>
-                <li>Investimento</li>
-                <li>Clube VIP</li>
-               </ul>
-            </div>
-            <div class="informacao_rodape-texto">
-                <h4>SOBRE NÓS</h4>
-                <ul>
-                    <li>Politica de privacidade</li>
-                    <li>Temos e Serviços</li>
-                    <li>Jogo Responsavel</li>
-                </ul>
+            <div class="informacao_caixa">
+                <div class="informacao_rodape-texto">
+                    <h4>LINKS</h4>
+                    <ul>
+                    <li class="lista_texto">Aposta</li>
+                    <li class="lista_texto">Esporte</li>
+                    <li class="lista_texto">Investimento</li>
+                    <li class="lista_texto">Clube VIP</li>
+                   </ul class="lista_texto">
+                </div>
+                <div class="informacao_rodape-texto">
+                    <h4>SOBRE NÓS</h4>
+                    <ul >
+                    <li class="lista_texto">Politica de privacidade</li>
+                    <li class="lista_texto">Temos e Serviços</li>
+                    <li class="lista_texto">Jogo Responsavel</li>
+                    </ul>
+                </div>
             </div>
           </div>
         </div>
