--- a/login.html
+++ b/login.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>login</title>
+    <link rel="stylesheet" href="eslitlos/login.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
 </head>
 <body>
-    <h1>principal_login</h1>
+    <main>
+        <section id="login">
+            <div id="imagem">
+
+            </div>
+            <div id="formulario">
+                <h1>Login</h1>
+                <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configuraçãoes no seu ambiente.</p>
+                <form action="form.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-icons">person</span>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu E-mail" required autocomplete="email">
+                         <label for="ilogin">Login</label> 
+                    </div>
+                    <div class="campo">
+                        <span class="material-icons">vpn_key</span>
+                        <input type="password" name="senha" id="isenha" placeholder="Sua senha" required minlength="8"
+                        maxlength="20" autocomplete="current-password">
+                         <label for="isenha">Senha</label>
+                    </div>
+                    <input class="botao" type="submit" value="Entrar">
+                    <a class="esqueceu" href="#">Esqueci a senha<span class="material-icons">mail</span></a>
+                    <a class="esqueceu" href="#">Cadrastrar<span class="material-icons">how_to_reg </span></a>
+                </form>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
