ALTERAÇÂO NA TAG

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <h1 class="cassino_h1">GANHAR MAIS</h1>
                 <p class="cassino_p">Aqui voce pode ganhar so colocando o seu dinheiro ajudando nosso serviços e voltara para você.</p>
                 <div class="cassino_link">
-                    <a href="jogos.html" class="link link_cassino esportes">vá para esportes </a>
+                    <a href="jogos.html" class="link link_cassino esportes">Começar agora</a>
                 </div>
         </div>
         </main>
