Colocando api de cassino e esporte

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
              <h1 class="barra-h1">Entre na emoção. Aposte na sorte. </h1>
             <div>
         
-                <h2 class="barra-h2">Cadrastre-se e receba bônus de deposito de até R$1000</h2>
+                <h2 class="barra-h2">cadastre-se e receba bônus de deposito de até R$1000</h2>
             </div>
             <div class="barra-button-caixa">
-            <a href="login.html" class="barra-button">Cadastrar-se AGORA</a>
+            <a href="login.html" class="barra-button">cadastre-se agora</a>
           </div>
         </div>
     </div>
@@ -27,6 +27,11 @@
             <div class="cabecalho_cadrastro">
                 <div class="cabecalho_cadrastro-img">
                     <img class="cadrastro_img" src="Imagens/LOGO.png" alt="Logo" >
+                </div>
+                <div class="cabecalho_aposta">
+                    <a class="link cabecalho_aposta-link" href="cassino/cassino.html.html">Cassino</a>
+                    <a class="link cabecalho_aposta-link" href="esportes/index.html">Esporte</a>
+                    <a class="link cabecalho_aposta-link" href="">Investimento</a>
                 </div>
                 <div class="cabecalho_configuração"> 
                      <span onclick="configuracao_open()" class="material-symbols-outlined cadrastro_configuracao">
@@ -65,7 +70,7 @@
         <main class="principal"> 
                 <div class="principal_caixa">
                     <h1 class="principal_caixa-h1">Bem-vindo ao<br>BetNest</h1>
-                    <p class="principal_caixa-p">Cadrastre-se e receba bônus de deposito de até R$1000</p>
+                    <p class="principal_caixa-p">cadastre-se e receba bônus de deposito de até R$1000</p>
                     <div class="Bonus">
                         <a class="link cadrastro_bonus" href="cadrastro.html">Cadrastrar</a>
                     </div>
@@ -82,7 +87,7 @@
                     </div>
                     <div class="princiapl_passo-cadrastro">
                         <div class="informacao">
-                            <h1 class="infromacao_h1">Cadrastre-se</h1>
+                            <h1 class="infromacao_h1">cadastre-se</h1>
                             <p class="iformacao_Seta"></p>
                             <h1 class=" infromacao_h1">Depositar</h1>
                             <p class="iformacao_Seta"></p>
@@ -94,14 +99,14 @@
                 <h1 class="cassino_h1">Cassino</h1>
                 <p class="cassino_p">Faça sua aposta e desafie a sorte. A emoção está a apenas um clique de distância! </p> 
                 <div class="cassino_link">
-                    <a class="link link_cassino" href="jogos/Jogocontagem.html">IR AO CASSINO</a>
+                    <a class="link link_cassino" href="cassino/cassino.html.html">IR AO CASSINO</a>
                 </div>
             </div>
             <div class="caixa_central caixa_esporte">
                     <h1 class="cassino_h1">Esportes</h1>
                     <p class="cassino_p">Nossas apostas esportivas intuitivas são feitas para jogadores novos e experientes.</p>
                     <div class="cassino_link">
-                        <a href="FOTEBOOL/index.html" class="link link_cassino esportes">vá para esportes </a>
+                        <a href="esportes/index.html" class="link link_cassino esportes">vá para esportes </a>
                     </div>
             </div>
             <div class="caixa_central caixa_investimento">
