--- a/cassino/cassino.html.html
+++ b/cassino/cassino.html.html
@@ -14,12 +14,14 @@
     
     <main>
         <div class="user-info">
-            <div>
-                <!--https://via.placeholder.com/50-->
-                <img src="imagem/perfil.png" alt="User">
-                <span>Nome do Usuário</span>
+            <div class="infor">
+                <div>
+                    <!--https://via.placeholder.com/50-->
+                    <img src="imagem/perfil.png" alt="User">
+                    <span>Nome do Usuário</span>
+                </div>
+                <div class="balance">Saldo: R$ 1000,00</div>
             </div>
-            <div class="balance">Saldo: R$ 1000,00</div>
         </div>
 
         <div class="bet-options">
