Area de investimento

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="cabecalho_aposta">
                     <a class="link cabecalho_aposta-link" href="cassino/cassino.html.html">Cassino</a>
                     <a class="link cabecalho_aposta-link" href="esportes/index.html">Esporte</a>
-                    <a class="link cabecalho_aposta-link" href="">Investimento</a>
+                    <a class="link cabecalho_aposta-link" href="investimento/investimento.html">Investimento</a>
                 </div>
                 <div class="cabecalho_configuração"> 
                      <span onclick="configuracao_open()" class="material-symbols-outlined cadrastro_configuracao">
@@ -113,7 +113,7 @@
                 <h1 class="cassino_h1">GANHAR MAIS</h1>
                 <p class="cassino_p">Aqui voce pode ganhar so colocando o seu dinheiro ajudando nosso serviços e voltara para você.</p>
                 <div class="cassino_link">
-                    <a href="jogos.html" class="link link_cassino esportes">Começar agora</a>
+                    <a href="investimento/investimento.html" class="link link_cassino esportes">Começar agora</a>
                 </div>
         </div>
         </main>
