--- a/investimento/investimento.html
+++ b/investimento/investimento.html
@@ -15,7 +15,7 @@
                 <img src="../cassino/imagem/perfil.png" alt="User">
                 <span>Nome do Investidor</span>
             </div>
-            <div class="balance">Saldo Investido: R$ 10.000,00</div>
+            <div class="balance">Saldo: R$ 10.000,00</div>
         </div>
         <h1 class="investment-details_texto">Plataforma de Investimento</h1>
         <div class="investment-details">
