--- a/investimento/pagina_investimento.html
+++ b/investimento/pagina_investimento.html
@@ -9,7 +9,13 @@
 </head>
 <body>
     <header>
-        <h1>Detalhes do Investimento</h1>
+        <div class="investment-info">
+            <div>
+                <img src="../cassino/imagem/perfil.png" alt="User">
+            
+            </div>
+            <div class="balance">Saldo: R$ 10.000,00</div>
+        </div>
     </header>
     
     <main>
